--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-# Personal storage
+# Misc storage
 storage/
 pool.txt
 logs.txt
 config.toml
+*.cast
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
